# fauxne

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  generate_static.sh  jsconfig.json  justfile  main.py  package.json  yes.js
api/: Logger.js  Logger.ts  VoiceClient.js  VoiceClient.ts  VoiceConnection.js  VoiceConnection.ts  app.js  app.ts
eris/: app.js  app.ts
helpers/: mpy.py  wipe.py
include/: ansi.h  chunked_str.h  error.h  http.h  log.h  lwipopts.h  str.h  vector.h
include/http/: callbacks.h  headers.h  parse.h  request.h  response.h
libs/log/include/: ansi.h  log.h
libs/str/include/: str.h
lwip/: lwipopts.h
phone/: sipp.xml
pico-sdk-sys/: Cargo.toml  README.md  build.rs
src/: access_point.py  cgi.c  circular.rs  core0.py  core1.py  error.c  events.py  http.c  lib.rs  main.c  main.rs  voice_client.rs  web_server.py
src/broadcast/: channel.py  receiver.py
src/http/: callbacks.c  parse.c  repsonse.c
src/ui/: logger.rs  mod.rs
src/voice/: client.rs  mod.rs
src/voice/gateway/: connection.rs  intents.rs  mod.rs
src/voice/gateway/message/: incoming.rs  mod.rs  outgoing.rs
src/voice/gateway/message/model/: activity.rs  id.rs  mod.rs  text.rs  user.rs
static_files/: 404.html  405.html  event.js  index.html
static_files/js/: event.js  index.js
