[package]
name = "ye-olde-discord"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
async-tungstenite = { version = "0.4.2", features = ["async-std-runtime", "async-native-tls"] }
async-native-tls  = "0.3.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
futures = "0.3.5"
dotenv = "0.15.0"
thiserror = "1.0.18"
log = "0.4.8"
simplelog = "0.7.6"