[package]
name = "ye-olde-discord"
version = "0.1.0"
authors = ["DusterTheFirst <14093962+DusterTheFirst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-native-tls  = "0.3.3"
async-std = { version = "1.6.0", features = ["attributes", "unstable"] }
async-tungstenite = { version = "0.5.0", features = ["async-std-runtime", "async-native-tls"] }
bitflags = "1.2.1"
ctrlc = "3.1.4"
derive_more = "0.99.7"
dotenv = "0.15.0"
futures = "0.3.5"
log = "0.4.8"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
serde_repr = "0.1.5"
thiserror = "1.0.19"
pretty_env_logger = "0.4.0"